--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Halloween Helper</title>
+        <title>Sweater Wonderland</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="img/ghost.png" />
         <!-- Bootstrap icons-->
@@ -22,7 +22,7 @@
             <div class="container px-4 px-lg-5">
                 <a class="navbar-brand" href="index.html">
                     <img src="img/ghost.png" width="30px"/>
-                    Halloween Helper
+                    Sweater Wonderland
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -37,7 +37,7 @@
         <header class="bg-dark py-5">
             <div class="container px-4 px-lg-5 my-5">
                 <div class="text-center text-white">
-                    <h1 class="display-4">"Clothes make a statement. Costumes tell a story."</h1>
+                    <h1 class="display-4">"Clothes make a statement. Sweaters tell a story."</h1>
                     <p class="lead fw-normal text-white-50 mb-0">Mason Cooley</p>
                 </div>
             </div>
@@ -72,7 +72,7 @@
         </section>
         <!-- Footer-->
         <footer class="py-5 bg-dark">
-            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Halloween Helpers 2022</p></div>
+            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Sweater Wonderland 2022</p></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
