the code works!

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -47,7 +47,7 @@
             <div class="container px-4 px-lg-5 mt-5">
                 <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
                     <!--Start the loop for printing products (see RDS lab)-->
-                    <% aCostumes.forEach(cos => { %>
+                    <% asweaters.forEach(cos => { %> 
                         <div class="col mb-5">
                             <div class="card h-100">
                                 
@@ -56,7 +56,7 @@
                                 <div class="card-body p-4">
                                     <div class="text-center">
                                         
-                                        <h5 class="fw-bolder"><%= cos.costumename %></h5>
+                                        <h5 class="fw-bolder"><%= cos.name %></h5>
                                     </div>
                                 </div>
                                 
